#20654 Don't insert space after table reference completion (#20696)
* #20654 Don't insert space after table reference completion

* #20654 Use Map.of() instead of explicit map creation